OO-60: remove support for HSQLDB